[all] upgrade jdk21 quarkus-3.4.1