@@ -13,8 +13,8 @@
     <artifactId>metadata-server</artifactId>
 
     <properties>
-        <maven.compiler.source>20</maven.compiler.source>
-        <maven.compiler.target>20</maven.compiler.target>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
@@ -45,7 +45,6 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.28</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -155,11 +154,11 @@
                     <source>${maven.compiler.source}</source>
                     <target>${maven.compiler.target}</target>
                     <compilerArgs>
-                        <arg>--enable-preview</arg>
+<!--                        <arg>&#45;&#45;enable-preview</arg>-->
                         <arg>-Dnet.bytebuddy.experimental</arg>
                         <arg>-Dquarkus.arc.remove-unused-beans=false</arg>
                     </compilerArgs>
-                    <jvmArgs>--add-exports=jdk.naming.dns/com.sun.jndi.dns=java.naming --enable-preview --add-opens java.base/java.lang=ALL-UNNAMED</jvmArgs>
+                    <jvmArgs>--add-exports=jdk.naming.dns/com.sun.jndi.dns=java.naming <!--&#45;&#45;enable-preview--> --add-opens java.base/java.lang=ALL-UNNAMED</jvmArgs>
                 </configuration>
             </plugin>
             <plugin>
@@ -168,7 +167,7 @@
                 <version>${compiler-plugin.version}</version>
                 <configuration>
                     <compilerArgs>
-                        <arg>--enable-preview</arg>
+<!--                        <arg>&#45;&#45;enable-preview</arg>-->
                         <arg>-parameters</arg>
                     </compilerArgs>
                 </configuration>
@@ -181,7 +180,8 @@
                     <systemPropertyVariables>
                         <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
                     </systemPropertyVariables>
-                    <argLine>--enable-preview -Djdk.tracePinnedThreads</argLine>
+                    <argLine>-Djdk.tracePinnedThreads</argLine>
+<!--                    <argLine>&#45;&#45;enable-preview -Djdk.tracePinnedThreads</argLine>-->
                 </configuration>
             </plugin>
             <plugin>
